# QAequilibraE

./: .gitignore  .pre-commit-config.yaml  README.md  Update_Log.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: AequilibraeUpdates.yml  DevWorkflow.yml  WindowsRelease.yml  documentation.yml  release.yml  translation.yml
ci/: replace_regex.py  sys_info.py
docs/source/: conf.py  getting_started.rst  index.rst  latex_index.rst  menus_in_detail.rst  processing_provider.rst  qgis.rst
qaequilibrae/: aequilibrae_version.txt  download_extra_packages_class.py  metadata.txt  qaequilibrae.py
test/: conftest.py  qgis_interface.py  requirements-test.txt  requirements_test.txt  test_add_centroid_connector.py  test_add_zones.py  test_compare_scenarios.py  test_create_bandwidths.py  test_create_desirelines.py  test_create_examples.py  test_create_pro_file.py  test_create_transponet.py  test_creates_transponet.py  test_data_layer_from_dataframe.py  test_display_aequilibrae_formats.py  test_distribution_procedures.py  test_gis_desire_lines.py  test_impedance_matrix.py  test_init.py  test_load_dataset.py  test_load_matrix.py  test_load_parameters.py  test_load_plugin.py  test_load_project_data.py  test_network_preparation.py  test_processing_provider.py  test_pt_procedures.py  test_qaequilibrae_menu_with_project.py  test_qaequilibrae_menu_without_project.py  test_qgis_environment.py  test_report_dialog.py  test_route_choice.py  test_routing.py  test_shortest_path.py  test_simple_tag.py  test_traffic_assignment.py  utilities.py
(+120 files in other folders)
