[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[build-system]
requires = ["setuptools", "numpy<1.22", "cython", "pyaml", "pyqt5", "requests", "scipy", "shapely", "pandas", "pyarrow", "pyproj"]

[tool.qgis-plugin-ci]
plugin_path = "qaequilibrae"
github_organization_slug = "aequilibrae"
project_slug = "qaequilibrae"

[tool.coverage.run]
omit = ["qaequilibrae/packages/*"]