[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[build-system]
requires = ["setuptools", "numpy<1.22", "cython", "pyaml", "pyqt5", "requests", "scipy", "shapely", "pandas", "pyarrow", "pyproj"]

[tool.qgis-plugin-ci]
plugin_path = "qaequilibrae"
github_organization_slug = "aequilibrae"
project_slug = "qaequilibrae"

[tool.coverage.run]
omit = ["qaequilibrae/packages/*"]

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 120
max-complexity = 20
select = ["B", "C", "E", "F", "W", "T4", "B9"]
exclude = [".idea", ".git", "__pycache__", "sphinx", ".venv", "qaequilibrae/packages/*", "test", "docs"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "F403", "F401"]